Add revocable team access to cloud runner
